--- a/polybar/config
+++ b/polybar/config
@@ -1,15 +1,14 @@
 [bar/bar]
 
-font-0 = "Fira Code:pixelsize=11;2.25"
-font-1 = "Font Awesome 5 Free Solid:style=Solid"
-font-2 = "FontAwesome:style=Regular:pixelsize=10;0"
-
-;;monitor = "HDMI-1-2"
+font-0 = "FiraCode Nerd Font:pixelsize=11;2.25"
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
 fixed-center = true
+
+#For applets
+tray-position = right
 
 width = 100%
 height = 30
@@ -20,10 +19,7 @@ foreground = #707880
 radius = 0.0
 
 line-size = 2
-# line-color = #f00
 
-# border-size = 2
-# border-color = #00ff00
 padding-left = 1
 padding-right = 1
 module-margin = 0
@@ -31,6 +27,10 @@ module-margin = 0
 modules-left = i3 
 modules-center = date title
 modules-right = cpu xkeyboard battery
+
+[module/network]
+type=internal/network
+interface = wlp4s0
 
 [module/battery]
 type=internal/battery
@@ -47,6 +47,8 @@ format-charging-foreground = #00ff37
 
 format-chargning-underline = #00ff37
 
+format-charging-margin = 1
+
 format-discharging = <label-discharging>
 
 label-discharging = Discharging %percentage%% Time %time%
@@ -56,6 +58,17 @@ format-discharging-foreground = #ff0000
 format-discharging-underline = #ff0000
 
 format-discharging-margin = 1
+
+format-full = <label-full>
+
+label-full = Fully charged %percentage%
+
+format-full-foreground = #176e2e
+
+format-full-underline = #176e2e
+
+format-full-margin = 1
+
 
 [module/cpu]
 type=internal/cpu
@@ -101,24 +114,24 @@ label-focused = %name%
 label-focused-foreground = #0077be 
 label-focused-underline = #51f0b6
 label-focused-padding = 1
-label-focused-font = 2
+label-focused-font = 0
 
 label-unfocused = %name%
 label-unfocused-foreground = #c2f0e4
 label-unfocused-underline = #f2de9d
 label-unfocused-padding = 1
-label-unfocused-font = 2
+label-unfocused-font = 0
 
 label-visible = %name%
 label-visible-underline = #555555
 label-visible-padding = 1
-label-visible-font = 2
+label-visible-font = 0
 
 label-urgent = %name%
 label-urgent-foreground = #000000
 label-urgent-background = #ffffff
 label-urgent-padding = 1
-label-urgnet-font = 2
+label-urgnet-font = 0
 
 [module/date]
 type = internal/date
@@ -143,7 +156,6 @@ format-padding = 1
 
 [module/title]
 type = internal/xwindow
-# format-background = #f00
 format-foreground = #f0c674
 format-underline = #ffffff
 format-padding = 1
